@@ -10,8 +10,8 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v26.2.9-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2026-02-09 10:59:26, took 00:21:29, with 50 workers, on 4284 cases, 0 failed, 0 traces, 4 retries<br/>
-jvm: ./rtr.bin, other: null<br/>
+tested: 2026-02-09 12:39:59, took 01:00:01, with 20 workers, on 4284 cases, 1 failed, 0 traces, 29 retries<br/>
+jvm: java -Xmx256m -jar rtr.jar, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
 <tr><td><a href="http://sources.freertr.org/cfg/basic01.tst">basic01.tst</a></td><td>success</td><td>dummy test</td></tr>
@@ -4007,7 +4007,7 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-olsr29.tst">rout-olsr29.tst</a></td><td>success</td><td>olsr auto summarization</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-ospf01.tst">rout-ospf01.tst</a></td><td>success</td><td>ospf point2point connection</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-ospf02.tst">rout-ospf02.tst</a></td><td>success</td><td>ospf point2multipoint connection</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/rout-ospf03.tst">rout-ospf03.tst</a></td><td>success</td><td>ospf point2multipoint nonbroadcast connection</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-ospf03.tst">rout-ospf03.tst</a></td><td>#6-run-r1 tping 100 80 2.2.2.2 vrf v1</td><td>ospf point2multipoint nonbroadcast connection</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-ospf04.tst">rout-ospf04.tst</a></td><td>success</td><td>ospf broadcast connection</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-ospf05.tst">rout-ospf05.tst</a></td><td>success</td><td>ospf nonbroadcast connection</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-ospf06.tst">rout-ospf06.tst</a></td><td>success</td><td>ospf point2point chain</td></tr>
